benchmarks: revert use of CMS GC